--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="2D6-Ho-tTY" id="94r-Gd-Cob"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="I0L-fm-RIq"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="I0L-fm-RIq">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wV1-02-blh">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="2D6-Ho-tTY" id="PVJ-WW-zwJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EZR-PQ-eRz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
